[package]
name = "axe"
version = "0.2.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"

[dependencies]
argparse = "0.2.2"
chrono = "*"
deco = "0.2"
failure = "*"
libc = "*"
libnotify = "*"
patrol = "*"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]

