[package]
name = "axe"
version = "0.2.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"

[[bin]]
name = "axe"
path = "src/main.rs"

[features]
default = []
notification = ["libnotify"]

[dependencies]
argparse = "0.2.2"
chrono = "*"
deco = "0.2"
failure = "*"
libc = "*"
libnotify = { version = "*", optional = true }

[dependencies.patrol]
git = "https://github.com/anekos/patrol.git"
rev = "118b6ed3d6a0a488a885e9153c2c1a41fde955cc"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
