[package]
name = "axe"
version = "0.2.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"

[[bin]]
name = "axe"
path = "src/main.rs"

[features]
default = []
notification = ["libnotify"]

[dependencies]
argparse = "0.2.2"
chrono = "*"
deco = "0.2"
enclose = "*"
errno = "*"
failure = "*"
if-let-return = "*"
libc = "*"
libnotify = { version = "*", optional = true }
signal-hook = "*"

[dependencies.patrol]
git = "https://github.com/anekos/patrol.git"
rev = "d76e38dc5e504f2e15ef4e4f5d4f99c7c4bc7122"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
